--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,6 @@
     <string name="title_activity_screen_shot">ScreenShot</string>
     <string name="title_activity_driver_list">DriverList</string>
     <string name="title_activity_pcfile_list">PCFileList</string>
+    <string name="title_activity_to_phone">ToPhone</string>
 
 </resources>
